# nlp-aph

./: .gitignore  README.md  app.py  chunking.ipynb  dl_modeling.ipynb  requirements.txt  run.py
data/db/89ecbc42-7eaa-4718-83ff-f632b32be5c1/: index_metadata.pickle
deprecated/: chunks.py  create_local_db.py
docs/: README.md  api.md  compliance.md  deployment.md  development_environment.md  technical.md  user_manual.md
notebooks/: dl_modeling.ipynb
py_scripts/: knowledge_prompt.py  main.py  run_model.py  zephyr.py
rust_scripts/: Cargo.toml  prompt.txt
rust_scripts/src/: knowledge_prompt.rs  main.rs  ollama.rs  zephyr.rs
scripts/: access_db.py  access_local_db.py  bootstrap.py  create_local_db.py  create_prompt.py  load_docs.py  main.py  non_dl_naive.py
tests/: test_dl.py  test_naive.py
