[package]
name = "rust_opt"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-config = { version = "1.1.8", features = ["behavior-version-latest"] }
aws-sdk-bedrockagentruntime = "1.12.0"